--- a/BlackJack.ipynb
+++ b/BlackJack.ipynb
@@ -11,21 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "\n",
+    "'''\n",
+    "Deck class stores deck of cards, can shuffle it and peek some amount from top\n",
+    "'''\n",
     "import random\n",
     "\n",
     "class Deck:\n",
     "    '''\n",
     "    Class to represent the Black Jack game\n",
     "    It contains deck of cards, stored as list of tuples e.g. (2, '♠')\n",
-    "    '''   \n",
-    "    \n",
+    "    '''\n",
+    "\n",
     "    def __init__(self):\n",
     "        '''\n",
     "        Initializing instance you create a deck of cards\n",
@@ -33,29 +35,25 @@
     "        self.cards = []\n",
     "\n",
     "        # For each of possible suites\n",
-    "        for suit in ['♥','♦','♣','♠']:\n",
+    "        for suit in ['♥', '♦', '♣', '♠']:\n",
     "            # We define numeric values of the cards (except 10)\n",
-    "            for value in range(2,10):\n",
-    "                self.cards.append((value,suit))\n",
+    "            for value in range(2, 10):\n",
+    "                self.cards.append((value, suit))\n",
     "            # Next we define upper values like Ten, Ace, Quinn, etc.\n",
-    "            for value in ['T','J','Q','K','A']:\n",
-    "                self.cards.append((value,suit))\n",
-    "    \n",
+    "            for value in ['T', 'J', 'Q', 'K', 'A']:\n",
+    "                self.cards.append((value, suit))\n",
+    "\n",
     "    def shuffle(self):\n",
     "        '''Shuffles cards in the deck'''\n",
     "        random.shuffle(self.cards)\n",
-    "        \n",
+    "\n",
     "    def peek(self, amount=1):\n",
     "        '''\n",
     "        Method to peek a card from the deck\n",
     "        INPUT: amount of cards to be returned\n",
-    "        OUTPUT: returns Tuple with the card representation \n",
+    "        OUTPUT: returns Tuple with the card representation\n",
     "        '''\n",
-    "        result = []\n",
-    "        for i in range(0,amount):\n",
-    "            result.append(self.cards.pop())\n",
-    "        return result\n",
-    "        "
+    "        return [self.cards.pop() for i in range(0, amount)]\n"
    ]
   },
   {
@@ -69,29 +67,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "\n",
+    "'''\n",
+    "Hand class handles player's cards in the hand, can hit, print all cards in a hand and calculate score\n",
+    "'''\n",
     "class Hand:\n",
     "    '''\n",
-    "    Class to represent player's hand \n",
+    "    Class to represent player's hand\n",
     "    '''\n",
     "\n",
     "    def __init__(self, name, cards=[]):\n",
     "        '''\n",
-    "        To initialise player's hand you need to provide a list with tuples \n",
+    "        To initialise player's hand you need to provide a list with tuples\n",
     "        For instance [(2, '♠'), ([)'A', '♥')]\n",
     "        '''\n",
     "        self.name = name\n",
     "        self.cards = cards\n",
     "        self.score = self.get_score()\n",
     "\n",
-    "    \n",
-    "    def print_hand(self, hide_last = False):\n",
+    "\n",
+    "    def print_hand(self, hide_last=False):\n",
     "        '''\n",
     "        Draws a hand in a readable form\n",
     "        INPUTS: if hide_last is True last card of the Hand will be printed face down\n",
@@ -99,43 +99,43 @@
     "        '''\n",
     "        print('{} hand:'.format(self.name))\n",
     "        cards_cnt = len(self.cards)\n",
-    "        prnt  =     ' _____    '*len(self.cards)+'\\n'\n",
-    "        prnt +=     '|     |   '*len(self.cards)+'\\n'\n",
+    "        prnt = ' _____    '*len(self.cards)+'\\n'\n",
+    "        prnt += '|     |   '*len(self.cards)+'\\n'\n",
     "        for i in range(0, cards_cnt):\n",
-    "            prnt += '|  {}  |   '.format('*' if (hide_last and i==cards_cnt-1) else self.cards[i][0])\n",
+    "            prnt += '|  {}  |   '.format('*' if (hide_last and i == cards_cnt-1) else self.cards[i][0])\n",
     "        prnt += '\\n'\n",
-    "        prnt +=     '|     |   '*len(self.cards)+'\\n'\n",
+    "        prnt += '|     |   '*len(self.cards)+'\\n'\n",
     "        for i in range(0, cards_cnt):\n",
-    "            prnt += '|  {}  |   '.format('*' if (hide_last and i==cards_cnt-1) else self.cards[i][1])\n",
+    "            prnt += '|  {}  |   '.format('*' if (hide_last and i == cards_cnt-1) else self.cards[i][1])\n",
     "        prnt += '\\n'\n",
-    "        prnt +=     '|_____|   '*len(self.cards)+'\\n'\n",
+    "        prnt += '|_____|   '*len(self.cards)+'\\n'\n",
     "\n",
     "        return prnt\n",
-    "    \n",
+    "\n",
     "    def hit(self, card):\n",
     "        '''Peek card to the Hand'''\n",
-    "        self.cards += card  \n",
+    "        self.cards += card\n",
     "        self.score = self.get_score()\n",
-    "    \n",
+    "\n",
     "    def get_score(self):\n",
     "        '''Returns overall score of the player's hand'''\n",
     "        score = 0\n",
-    "        for value, suit in self.cards:\n",
-    "            if value in ['T', 'J', 'Q', 'K']:\n",
+    "        for card in self.cards:\n",
+    "            if card[0] in ['T', 'J', 'Q', 'K']:\n",
     "                score += 10\n",
-    "            elif value == 'A':\n",
+    "            elif card[0] == 'A':\n",
     "                if score + 11 <= 21:\n",
     "                    score += 11\n",
     "                else:\n",
     "                    score += 1\n",
     "            else:\n",
-    "                score += value\n",
+    "                score += card[0]\n",
     "        return score\n",
-    "            \n",
-    "    \n",
+    "\n",
+    "\n",
     "    def __str__(self):\n",
     "        '''String representation of the Hand class'''\n",
-    "        return self.print_hand()"
+    "        return self.print_hand()\n"
    ]
   },
   {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -158,50 +158,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Your balance is 130\n",
+      "Your balance is 140\n",
       "Dealer hand:\n",
-      " _____     _____     _____     _____     _____    \n",
-      "|     |   |     |   |     |   |     |   |     |   \n",
-      "|  7  |   |  3  |   |  Q  |   |  A  |   |  2  |   \n",
-      "|     |   |     |   |     |   |     |   |     |   \n",
-      "|  ♦  |   |  ♠  |   |  ♣  |   |  ♦  |   |  ♥  |   \n",
-      "|_____|   |_____|   |_____|   |_____|   |_____|   \n",
+      " _____     _____     _____    \n",
+      "|     |   |     |   |     |   \n",
+      "|  9  |   |  3  |   |  Q  |   \n",
+      "|     |   |     |   |     |   \n",
+      "|  ♦  |   |  ♠  |   |  ♠  |   \n",
+      "|_____|   |_____|   |_____|   \n",
       "\n",
       "Player hand:\n",
       " _____     _____    \n",
       "|     |   |     |   \n",
-      "|  2  |   |  8  |   \n",
+      "|  K  |   |  Q  |   \n",
       "|     |   |     |   \n",
-      "|  ♣  |   |  ♦  |   \n",
+      "|  ♣  |   |  ♥  |   \n",
       "|_____|   |_____|   \n",
       "\n",
       "Bust! Dealer loose... You WIN 10!!!\n",
       "Would you like to (L)eave or (S)tay and contunue? l\n",
       "Thank you for playing with us!\n",
-      "Your final balance is 140\n",
+      "Your final balance is 150\n",
       "Good Bye!\n"
      ]
     }
    ],
    "source": [
+    "'''\n",
+    "Black Jack game in text mode\n",
+    "'''\n",
     "from IPython.display import clear_output\n",
     "from Deck import Deck\n",
     "from Hand import Hand\n",
     "\n",
-    "def request_bet(balance):\n",
+    "def request_bet(curr_bal):\n",
     "    '''This function requests the player to bet some amount of the balance '''\n",
     "    the_bet = 0\n",
-    "    while the_bet == 0: \n",
+    "    while the_bet == 0:\n",
     "        try:\n",
     "            the_bet = int(input('Place your bet: '))\n",
-    "            if the_bet > balance:\n",
+    "            if the_bet > curr_bal:\n",
     "                the_bet = 0\n",
-    "                print('Not enough balance!')\n",
+    "                print('Not enough curr_bal!')\n",
     "        except ValueError:\n",
     "            print('Please, input ingeger value!')\n",
-    "    return the_bet    \n",
+    "    return the_bet\n",
     "\n",
-    "def questing(message ,variants):\n",
+    "def questing(message, variants):\n",
     "    '''Ask player something in message\n",
     "    OUTPUT: return True if player choose first two of provided variants, otherwise False\n",
     "    '''\n",
@@ -228,10 +231,10 @@
     "    print(\"Cool, let's start! Drawing cards...\\n\")\n",
     "    print(dealer.print_hand(True))\n",
     "    print(player)\n",
-    "    \n",
+    "\n",
     "    # Player turn\n",
-    "    while player.score < 21 and questing('How do you like it? Whant to (H)it or (S)tand? ', ['h','hit','s','stand']):\n",
-    "        player.hit(deck.peek())        \n",
+    "    while player.score < 21 and questing('What next? (H)it or (S)tand? ', ['h', 'hit', 's', 'stand']):\n",
+    "        player.hit(deck.peek())\n",
     "        #print('\\n'*100)\n",
     "        clear_output()\n",
     "        print(\"Your balance is {}\".format(balance))\n",
@@ -239,18 +242,18 @@
     "        print(player)\n",
     "        if player.score > 21:\n",
     "            break\n",
-    "    \n",
+    "\n",
     "    # Dealer turn\n",
     "    while dealer.score <= 21 and player.score < 21:\n",
     "        dealer.hit(deck.peek())\n",
-    "    \n",
+    "\n",
     "    # Final deck\n",
     "    clear_output()\n",
     "    #print('\\n'*100)\n",
     "    print(\"Your balance is {}\".format(balance))\n",
     "    print(dealer)\n",
     "    print(player)\n",
-    "    \n",
+    "\n",
     "    # And the winner is\n",
     "    if player.score > 21:\n",
     "        print('Bust! Sorry, but you loose your bet...')\n",
@@ -258,76 +261,25 @@
     "    elif dealer.score > 21:\n",
     "        print('Bust! Dealer loose... You WIN {}!!!'.format(bet))\n",
     "        balance += bet\n",
-    "    elif (dealer.score == player.score):\n",
+    "    elif dealer.score == player.score:\n",
     "        print('Push! Your bet is back...')\n",
     "        balance += bet\n",
-    "    elif dealer.score > player.score :\n",
+    "    elif dealer.score > player.score:\n",
     "        print('Dealer WIN! Sorry, but you loose your bet...')\n",
-    "    elif dealer.score < player.score :\n",
+    "    elif dealer.score < player.score:\n",
     "        print('Congratulations, you WIN {}!!!'.format(bet))\n",
     "        balance += bet\n",
     "    else:\n",
     "        pass\n",
     "\n",
-    "    if balance == 0 or questing('Would you like to (L)eave or (S)tay and contunue? ',['l','leave','s','stay']):\n",
+    "    if balance == 0 or questing('Would you like to (L)eave or (S)tay and contunue? ', ['l', 'leave', 's', 'stay']):\n",
     "        print('Thank you for playing with us!')\n",
     "        print('Your final balance is {}'.format(balance))\n",
     "        print('Good Bye!')\n",
     "        break\n",
     "    else:\n",
-    "        #print('\\n'*100) \n",
-    "        clear_output()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "someStay\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "questing('some', ['s','stay','h','hit'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'stay' in ['s','stay','h','hit'][0:2]"
+    "        #print('\\n'*100)\n",
+    "        clear_output()\n"
    ]
   },
   {
